# cognitive_robot_abstract_machine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  benchmark_rspn.py  docs_index.html  pyproject.toml
robokudo/: README.md  pyproject.toml  requirements.txt
robokudo/src/robokudo/: analysis_engine.py  cas.py  display.py  exceptions.py  garden.py  gui.py  idioms.py  pipeline.py  subtree.py  world.py  world_descriptor.py
robokudo/src/robokudo/annotators/: annotation_writer.py  blur.py  byte_track_annotator.py  camera_viewpoint_visualizer.py  cas_check.py  clip_annotator.py  cluster_color.py  cluster_color_histogram.py  cluster_pose_bb.py  cluster_pose_pca.py  cluster_position.py  collection_reader.py  core.py  file_writer.py  filter.py  icp_pose_refinement.py  image_cluster_extractor.py  image_preprocessor.py  lambda_function.py  location.py  object_associator.py  object_hypothesis_visualizer.py  object_pose_visualizer.py  outlier_removal_objecthypothesis.py  outputs.py  pipeline_trigger.py  plane.py  pointcloud_check.py  pointcloud_cluster_extractor.py  pointcloud_crop.py  query.py  region_filter.py  roi_adjuster.py  semantic_world_connector.py  shape_estimator.py  sift_annotator.py  simple_yolo_annotator.py  size_bb.py  static_camera_transform.py  static_object_detector.py  (+6 more)
robokudo/src/robokudo/behaviours/: action_server_checks.py  clear_errors.py  goal_canceled.py
robokudo/src/robokudo/descriptors/: __init__.py
robokudo/src/robokudo/io/: camera_interface.py  camera_without_depth_interface.py  cas_annotation_codecs.py  cas_view_codecs.py  file_reader_interface.py  open3d_codec_utils.py  ros.py  ros_camera_without_depth_interface.py  semdt_raytracer_camera_interface.py  storage.py  storage_reader_interface.py  tf_listener_proxy.py
robokudo/src/robokudo/scripts/: main.py  query_test_client.py
robokudo/src/robokudo/tree_components/: better_parallel.py  looping.py  query_based_task_scheduler.py  render_dot.py  task_scheduler.py
robokudo/src/robokudo/types/: __init__.py  annotation.py  belief_state.py  cv.py  scene.py
robokudo/src/robokudo/utils/: __init__.py  annotation_conversion.py  annotator_helper.py  camera_model.py  comparator_factories.py  comparators.py  cv_bridge_workaround.py  cv_helper.py  data_downloader.py  decorators.py  error_handling.py  file_loader.py  hypothesis_comparators.py  logging_configuration.py  math_helper.py  module_loader.py  non_maxima_suppression.py  o3d_helper.py  query.py  region.py  shape_estimator_adapters.py  shape_fitting.py  transform.py  tree.py  tree_execution.py  type_conversion.py  world_descriptor.py
robokudo/src/robokudo/vis/: __init__.py  cv_visualizer.py  multiprocessed_o3d_visualizer.py  o3d_visualizer.py  ros_visualizer.py  visualizer.py
segmind/: .gitignore  README.md  pyproject.toml
segmind/.devcontainer/: post_create_setup.sh
segmind/.devcontainer/code_spaces/: Dockerfile  devcontainer.json  packages.repos
segmind/.devcontainer/ros2_jazzy/: Dockerfile  devcontainer.json  entrypoint.sh  packages.repos  start-code-server.sh
segmind/resources/fame_episodes/alessandro_with_ycp_objects_in_max_room_2/: refined_poses.json
segmind/scripts/: generate_orm.py
segmind/src/segmind/: episode_player.py  episode_segmenter.py  event_logger.py  utils.py
segmind/src/segmind/datastructures/: enums.py  events.py  (+2 more)
(+1895 files in other folders)
