[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-robot-abstract-machine"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
description = "Meta-package that wires local subprojects together"
readme = "README.md"
authors = [{ name = "AICOR Institute", email = "you@example.com" }]
# IMPORTANT: Use absolute file URLs for portability
# The names must match each subproject’s [project.name]
#dependencies = [
#  "pycram-robotics @ file:///home/jonas/workspace/cognitive_robot_abstract_machine/pycram",
#  "giskardpy @ file:///home/jonas/workspace/cognitive_robot_abstract_machine/giskardpy",
#  "semantic_digital_twin @ file:///home/jonas/workspace/cognitive_robot_abstract_machine/semantic_digital_twin",
#]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pycram-robotics = { path = "pycram", develop = true }
giskardpy = { path = "giskardpy", develop = true }
semantic_digital_twin = { path = "semantic_digital_twin", develop = true }
krrood = { path = "krrood", develop = true }


[tool.setuptools]
# Make the root distribution package-less (no auto-discovery)
packages = []
