# pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "segmind"
dynamic = ["version", "dependencies"]
description = "Annotates activitiy episodes represented by meshes moving in a 3D environment with the corresponding events, actions and activities."
readme = "README.md"
authors = [{ name = "Abdelrhman Bassiouny", email = "abassiou@uni-bremen.de" }, { name = "Sorin Arion", email = "sorin@uni-bremen.de"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["robotics", "knowledge", "memories", "episodic", "pycram"]
requires-python = ">=3.10"


[tool.setuptools.packages.find]
where = ["src"]
include = ["segmind*"]

[tool.setuptools.dynamic]
version = {attr = "segmind.__version__"}
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/cram2/cognitive_robot_abstract_machine"
